--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Under Construction</title>
+    <title>Dream Polygon - Site Under Construction</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -17,7 +18,7 @@
       <section class="contact-us">
         <h2>Contact us for more infomation</h2>
         <div class="buttons">
-          <a class="button" href="mailto:your-email@example.com"
+          <a class="button" href="mailto:dreampolygon@gmail.com"
             ><img src="src/email.svg" alt="Email" /><span>Email Us</span></a
           >
           <a class="button" href="https://wa.me/+919586565325"
