--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <title>Dream Polygon</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:image" content="assets/Meta-Dreampolygon.png" />
+    <meta
+      property="og:title"
+      content="Dream Polygon | Best Custom Software Company In India"
+    />
+    <meta
+      property="og:description"
+      content="Dream Polygon takes the guesswork out of business software. We design custom solutions that automate tasks, improve data management, and enhance customer interactions, driving measurable results for your business. Experience the power of software built just for you."
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
