Calendly added index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,32 @@
       property="og:description"
       content="Dream Polygon takes the guesswork out of business software. We design custom solutions that automate tasks, improve data management, and enhance customer interactions, driving measurable results for your business. Experience the power of software built just for you."
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
+    <!-- Calendly badge widget begin -->
+    <link
+      href="https://assets.calendly.com/assets/external/widget.css"
+      rel="stylesheet"
+    />
+    <script
+      src="https://assets.calendly.com/assets/external/widget.js"
+      type="text/javascript"
+      async
+    ></script>
+    <script type="text/javascript">
+      window.onload = function () {
+        Calendly.initBadgeWidget({
+          url: "https://calendly.com/pp224273/30min",
+          text: "✦ Let's Connect!",
+          color: "#ffffff",
+          textColor: "#070731",
+          branding: undefined,
+        });
+      };
+    </script>
+    <!-- Calendly badge widget end -->
     <meta name="viewport" content="width=device-width" />
   </head>
 
