--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script type="text/javascript">
       window.onload = function () {
         Calendly.initBadgeWidget({
-          url: "https://calendly.com/pp224273/30min",
+          url: "https://calendly.com/pp224273/30min?hide_gdpr_banner=1",
           text: "✦ Let's Connect!",
           color: "#ffffff",
           textColor: "#070731",
